[package]
name = "settrade_dw"
version = "0.1.4"
authors = ["Supot Chainiramitkul <bingli224@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version='0.3.5', features=['macros', 'rt', 'rt-multi-thread' ] }
reqwest = { version = '0.10.9', features = [ 'blocking' ] }
chrono = '0.4.19'
regex = '1.4.2'
lazy_static = '1.4.0'
futures = '0.3.8'
serde_json = '1.0.60'
env_logger = '0.8.2'
log = '0.4.0'

[dev-dependencies]
rand = '0.8.0'