[package]
name = "settrade_dw"
version = "0.1.5"
authors = ["Supot Chainiramitkul <bingli224@gmail.com>"]
edition = "2018"

## https://stackoverflow.com/questions/60375324/how-to-ignore-an-example-when-running-tests-with-cargo
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version='0.3.6', features=['macros', 'rt', 'rt-multi-thread' ] } ## not support for reqwest v0.10.10
tokio = { version='0.2.5', features=['macros', 'rt-core' ] }    ## required version for reqwest before tokio v1
reqwest = { version = '0.10.10', features = [ 'blocking' ] }    ## next version requires tokio v1
chrono = '0.4.19'
regex = '1.4.2'
lazy_static = '1.4.0'
futures = '0.3.8'
serde_json = '1.0.60'
env_logger = '0.8.2'
log = '0.4.11'
async-trait = '0.1.42'

[dev-dependencies]
rand = '0.8.0'