[package]
name = "settrade_dw"
version = "0.1.8"
authors = ["Supot Chainiramitkul <bingli224@gmail.com>"]
edition = "2018"

[features]
stub-server = []	# trading-tor

## https://stackoverflow.com/questions/60375324/how-to-ignore-an-example-when-running-tests-with-cargo
#autoexamples = false

#[[example]]
#name = "console
#crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version='0.3.6', features=['macros', 'rt', 'rt-multi-thread' ] } ## not support for reqwest v0.10.10
# tokio = { version='0.2.5', features=['macros', 'core-rt' ] }    ## required version for reqwest before tokio v1
# reqwest = { version = '0.10.10', features = [ 'blocking' ] }    ## for tokio 0.2.5
# reqwest = { version = '0.10.10', features = [ 'blocking' ] }    ## for tokio 0.2.5
tokio = { version='1.0.0', features=['macros', 'rt-multi-thread' ] }    ## required version for reqwest before tokio v1
reqwest = { version = '0.11.4', features = [ 'blocking' ] }    ## next version requires tokio v1
chrono = '0.4.19'
regex = '1.5.4'
lazy_static = '1.4.0'
futures = '0.3.17'
serde_json = '1.0.68'
env_logger = '0.9.0'
log = '0.4.14'
async-trait = '0.1.51'

snafu = '0.6.10'

## required for #[automock], #[double]
mockall = '0.10.2'
mockall_double = '0.2.0'

[dev-dependencies]
rand = '0.8.0'